crates/xberg-ffi/include/xberg.h

typedef uint64_t XBERGAlefHandle;
/**
 * Create a `ChunkClassificationConfig` from a JSON string. Returns null on
 * failure. # Safety JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_chunk_classification_config_free`.
 */
XBERGAlefHandle xberg_chunk_classification_config_from_json(const char *json);
/**
 * Free a `ChunkClassificationConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_chunk_classification_config_free(XBERGAlefHandle handle);
/**
 * Serialize a `ChunkingConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_chunking_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `ChunkingConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_chunking_config_free(XBERGAlefHandle handle);
/**
 * Serialize a `ContentFilterConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_content_filter_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `ContentFilterConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_content_filter_config_free(XBERGAlefHandle handle);
/**
 * Serialize a `CrawlConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_crawl_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `CrawlConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_crawl_config_free(XBERGAlefHandle handle);
/**
 * Serialize a `DiffOptions` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_diff_options_to_json(XBERGAlefHandle handle);
/**
 * Free a `DiffOptions` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_diff_options_free(XBERGAlefHandle handle);
/**
 * Serialize a `DoctorCheck` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_doctor_check_to_json(XBERGAlefHandle handle);
/**
 * Free a `DoctorCheck` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_doctor_check_free(XBERGAlefHandle handle);
/**
 * Create a `DoctorReport` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_doctor_report_free`.
 */
XBERGAlefHandle xberg_doctor_report_from_json(const char *json);
/**
 * Serialize a `DoctorReport` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_doctor_report_to_json(XBERGAlefHandle handle);
/**
 * Free a `DoctorReport` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_doctor_report_free(XBERGAlefHandle handle);
/**
 * Create a `DocumentStructure` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_document_structure_free`.
 */
XBERGAlefHandle xberg_document_structure_from_json(const char *json);
/**
 * Serialize a `DocumentStructure` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_document_structure_to_json(XBERGAlefHandle handle);
/**
 * Free a `DocumentStructure` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_document_structure_free(XBERGAlefHandle handle);
/**
 * Serialize a `EmbeddingConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_embedding_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `EmbeddingConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_embedding_config_free(XBERGAlefHandle handle);
/**
 * Create a `ExtractInput` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_extract_input_free`.
 */
XBERGAlefHandle xberg_extract_input_from_json(const char *json);
/**
 * Serialize a `ExtractInput` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_extract_input_to_json(XBERGAlefHandle handle);
/**
 * Free a `ExtractInput` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_extract_input_free(XBERGAlefHandle handle);
/**
 * Create a `ExtractedDocument` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_extracted_document_free`.
 */
XBERGAlefHandle xberg_extracted_document_from_json(const char *json);
/**
 * Serialize a `ExtractedDocument` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_extracted_document_to_json(XBERGAlefHandle handle);
/**
 * Free a `ExtractedDocument` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_extracted_document_free(XBERGAlefHandle handle);
/**
 * Create a `ExtractionConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_extraction_config_free`.
 */
XBERGAlefHandle xberg_extraction_config_from_json(const char *json);
/**
 * Serialize a `ExtractionConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_extraction_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `ExtractionConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_extraction_config_free(XBERGAlefHandle handle);
/**
 * Serialize a `ExtractionResult` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_extraction_result_to_json(XBERGAlefHandle handle);
/**
 * Free a `ExtractionResult` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_extraction_result_free(XBERGAlefHandle handle);
/**
 * Create a `FootnoteConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_footnote_config_free`.
 */
XBERGAlefHandle xberg_footnote_config_from_json(const char *json);
/**
 * Serialize a `FootnoteConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_footnote_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `FootnoteConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_footnote_config_free(XBERGAlefHandle handle);
/**
 * Create a `HeuristicsConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_heuristics_config_free`.
 */
XBERGAlefHandle xberg_heuristics_config_from_json(const char *json);
/**
 * Free a `HeuristicsConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_heuristics_config_free(XBERGAlefHandle handle);
/**
 * Create a `LlmConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_llm_config_free`.
 */
XBERGAlefHandle xberg_llm_config_from_json(const char *json);
/**
 * Free a `LlmConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_llm_config_free(XBERGAlefHandle handle);
/**
 * Free a `MetaSchema` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_meta_schema_free(XBERGAlefHandle handle);
/**
 * Create a `Metadata` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_metadata_free`.
 */
XBERGAlefHandle xberg_metadata_from_json(const char *json);
/**
 * Free a `Metadata` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_metadata_free(XBERGAlefHandle handle);
/**
 * Create a `MultiVectorEmbedding` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_multi_vector_embedding_free`.
 */
XBERGAlefHandle xberg_multi_vector_embedding_from_json(const char *json);
/**
 * Free a `MultiVectorEmbedding` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_multi_vector_embedding_free(XBERGAlefHandle handle);
/**
 * Create a `PaddleOcrConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_paddle_ocr_config_free`.
 */
XBERGAlefHandle xberg_paddle_ocr_config_from_json(const char *json);
/**
 * Free a `PaddleOcrConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_paddle_ocr_config_free(XBERGAlefHandle handle);
/**
 * Create a `PageRange` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_page_range_free`.
 */
XBERGAlefHandle xberg_page_range_from_json(const char *json);
/**
 * Free a `PageRange` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_page_range_free(XBERGAlefHandle handle);
/**
 * Create a `PdfConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_pdf_config_free`.
 */
XBERGAlefHandle xberg_pdf_config_from_json(const char *json);
/**
 * Free a `PdfConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_pdf_config_free(XBERGAlefHandle handle);
/**
 * Create a `RedactionConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_redaction_config_free`.
 */
XBERGAlefHandle xberg_redaction_config_from_json(const char *json);
/**
 * Free a `RedactionConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_redaction_config_free(XBERGAlefHandle handle);
/**
 * Free a `Registry` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_registry_free(XBERGAlefHandle handle);
/**
 * Create a `ServerConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_server_config_free`.
 */
XBERGAlefHandle xberg_server_config_from_json(const char *json);
/**
 * Free a `ServerConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_server_config_free(XBERGAlefHandle handle);
/**
 * Free a `TokenCounter` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_token_counter_free(XBERGAlefHandle handle);
/**
 * Create a `UrlExtractionConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_url_extraction_config_free`.
 */
XBERGAlefHandle xberg_url_extraction_config_from_json(const char *json);
/**
 * Free a `UrlExtractionConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_url_extraction_config_free(XBERGAlefHandle handle);