packages/csharp/src/Xberg/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
// alef:handle-abi:1
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace Xberg;

internal static partial class NativeMethods {
  private const string LibName = "xberg_ffi";

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_meta_schema_free")]
  internal static extern void MetaSchemaFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_registry_free")]
  internal static extern void RegistryFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_token_counter_free")]
  internal static extern void TokenCounterFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_chunk_classification_config_from_json")]
  internal static extern ulong ChunkClassificationConfigFromJson(
      [MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_chunk_classification_config_free")]
  internal static extern void ChunkClassificationConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_doctor_report_from_json")]
  internal static extern ulong
  DoctorReportFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_doctor_report_free")]
  internal static extern void DoctorReportFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_document_structure_from_json")]
  internal static extern ulong
  DocumentStructureFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_document_structure_free")]
  internal static extern void DocumentStructureFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extract_input_from_json")]
  internal static extern ulong
  ExtractInputFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extract_input_free")]
  internal static extern void ExtractInputFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extracted_document_from_json")]
  internal static extern ulong
  ExtractedDocumentFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extracted_document_free")]
  internal static extern void ExtractedDocumentFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_config_from_json")]
  internal static extern ulong
  ExtractionConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_config_free")]
  internal static extern void ExtractionConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_footnote_config_from_json")]
  internal static extern ulong
  FootnoteConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_footnote_config_free")]
  internal static extern void FootnoteConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_heuristics_config_from_json")]
  internal static extern ulong
  HeuristicsConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_heuristics_config_free")]
  internal static extern void HeuristicsConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_llm_config_from_json")]
  internal static extern ulong
  LlmConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_llm_config_free")]
  internal static extern void LlmConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_metadata_from_json")]
  internal static extern ulong
  MetadataFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_metadata_free")]
  internal static extern void MetadataFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_multi_vector_embedding_from_json")]
  internal static extern ulong MultiVectorEmbeddingFromJson(
      [MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_multi_vector_embedding_free")]
  internal static extern void MultiVectorEmbeddingFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_from_json")]
  internal static extern ulong
  PaddleOcrConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_free")]
  internal static extern void PaddleOcrConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_page_range_from_json")]
  internal static extern ulong
  PageRangeFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_page_range_free")]
  internal static extern void PageRangeFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_pdf_config_from_json")]
  internal static extern ulong
  PdfConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_pdf_config_free")]
  internal static extern void PdfConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_config_from_json")]
  internal static extern ulong
  RedactionConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_config_free")]
  internal static extern void RedactionConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_server_config_from_json")]
  internal static extern ulong
  ServerConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_server_config_free")]
  internal static extern void ServerConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_url_extraction_config_from_json")]
  internal static extern ulong
  UrlExtractionConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_url_extraction_config_free")]
  internal static extern void UrlExtractionConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_chunking_config_to_json")]
  internal static extern IntPtr ChunkingConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_chunking_config_free")]
  internal static extern void ChunkingConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_content_filter_config_to_json")]
  internal static extern IntPtr ContentFilterConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_content_filter_config_free")]
  internal static extern void ContentFilterConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_crawl_config_to_json")]
  internal static extern IntPtr CrawlConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_crawl_config_free")]
  internal static extern void CrawlConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_diff_options_to_json")]
  internal static extern IntPtr DiffOptionsToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_diff_options_free")]
  internal static extern void DiffOptionsFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_doctor_check_to_json")]
  internal static extern IntPtr DoctorCheckToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_doctor_check_free")]
  internal static extern void DoctorCheckFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_doctor_report_to_json")]
  internal static extern IntPtr DoctorReportToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_document_structure_to_json")]
  internal static extern IntPtr DocumentStructureToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_embedding_config_to_json")]
  internal static extern IntPtr EmbeddingConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_embedding_config_free")]
  internal static extern void EmbeddingConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extract_input_to_json")]
  internal static extern IntPtr ExtractInputToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extracted_document_to_json")]
  internal static extern IntPtr ExtractedDocumentToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_config_to_json")]
  internal static extern IntPtr ExtractionConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_result_to_json")]
  internal static extern IntPtr ExtractionResultToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_result_free")]
  internal static extern void ExtractionResultFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_footnote_config_to_json")]
  internal static extern IntPtr FootnoteConfigToJson(ulong ptr);
